# vk_social_graph

./: .gitignore  README.md  actions.py  config.ini.example  config.py  db.py  errors.py  gephi.py  logger.py  main.py  pyproject.toml  reqs.py  requirements.txt  tests.py  texts.py  user_data.py  vk_script.py
config/: config.py
db/: db.py
models/: _types.py
service/: actions.py  friends.py  gephi.py  graph_search.py  parser.py  users.py
tests/: test_db.py  test_reqs.py
utils/: errors.py  reqs.py  tps_bucket.py
